2007-04-05  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-comp.el (skk-comp-get-regexp):
	* skk-isearch.el (skk-isearch-search-string-regexp):
	* skk.el (skk-kana-input):
	(skk-add-rule):
	(skk-delete-rule):
	* tut-code/skk-mkmgk.el (skk-make-mazegaki-dic-1):

	Use `string-to-list' instead of `string-to-char-list'.

2007-04-04  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-annotations.el (skk-annotation-wikipedia-1): Regexp fix.
	Remove tables and bigs.  Remove "A > B > C"-like hierarchy.
	Modify the cache buffer name.
	(skk-annotation-wikipedia-cache): Return pair of cached annotation
	and the cache buffer name.
	(skk-annotation-wait-for-input): Also browse wikipedia/wiktionary
	URLs.
	(skk-annotation-find-url): Discard URL that does not contain a
	domain name.

	(skk-annotation-wikipedia-normalize-word): New function.

2007-04-03  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* skk-server.el (skk-server-1): Workaround for a problem where
	Emacs tries to accept replies from SKK server too fast and too
	often.  Just call `sit-for' with 10 milliseconds interval after
	`accept-process-output' to avoid the problem.

2007-04-03  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-annotation.el (skk-annotation-url-package-available-p): Also
	support Emacs 20.7 with unofficial MULE 4.1 patch.

	(skk-annotation-find-and-show):
	(skk-annotation-display-p):
	(skk-annotation-wikipedia-region):

	Clear existing messages.

	* skk-e21.el (skk-tooltip-size): New function.
	(skk-tooltip-show-at-point): Implement mouse pointer-indepent
	decision of tooltip frame position.
	(skk-tooltip-show-1): When skk-tooltip-mouse-behavior is follow,
	refer to skk-tooltip-x-offset and skk-tooltip-y-offset instead of
	default offset variables.  Clear existing messages.
	Use `mouse-avoidance-set-mouse-position'.

	* skk-vars.el (skk-tooltip-mouse-behavior):
	(skk-tooltip-x-offset):
	(skk-tooltip-y-offset):

	New variables.

	* skk-xemacs.el (skk-tooltip-show-at-point):